--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bilibili_live_tool"
 version = "0.1.0"
 edition = "2024"
-description = "哔哩哔哩直播工具的Rust版本"
+description = "哔哩哔哩直播工具"
 authors = ["FWW <3223400498@qq.com>"]
 license = "MIT"
 readme = "README.md"
@@ -27,6 +27,10 @@ toml = "0.8"
 urlencoding = "2.1"
 ratatui = "0.29"
 crossterm = "0.29"
+md-5 = "0.10"
+hmac = "0.12"
+sha2 = "0.10"
+hex = "0.4"
 
 [profile.release]
 lto = true
