--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,22 @@ authors = ["FWW <3223400498@qq.com>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/ChaceQC/bilibili_live_stream_code"
-keywords = ["bilibili", "live", "stream", "tool"]
-categories = ["multimedia", "web-programming"]
+keywords = [
+    "bilibili",
+    "live",
+    "stream",
+    "tool",
+]
+categories = [
+    "multimedia",
+    "web-programming",
+]
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json", "cookies"] }
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
 qrcode = "0.14"
 image = "0.25"
 config = "0.15"
-clap = { version = "4.5", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
 regex = "1.11"
 thiserror = "2.0"
 url = "2.5"
@@ -31,6 +34,29 @@ md-5 = "0.10"
 hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
+
+[dependencies.reqwest]
+version = "0.12"
+features = [
+    "json",
+    "cookies",
+]
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
+
+[dependencies.tokio]
+version = "1.0"
+features = ["full"]
+
+[dependencies.clap]
+version = "4.5"
+features = ["derive"]
+
+[dependencies.chrono]
+version = "0.4"
+features = ["serde"]
 
 [profile.release]
 lto = true
