--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
             target: x86_64-pc-windows-msvc
           - os: macos-latest
             artifact_name: bilibili_live_tool
-            asset_name: bilibili_live_tool-macos-aarch64
+            asset_name: bilibili_live_tool-macos-aarch64.dmg
             target: aarch64-apple-darwin
 
     steps:
@@ -85,12 +85,12 @@ jobs:
           ## Downloads
           - **Linux**: `bilibili_live_tool-linux-x86_64`
           - **Windows**: `bilibili_live_tool-windows-x86_64.exe`
-          - **macOS**: `bilibili_live_tool-macos-aarch64`
+          - **macOS**: `bilibili_live_tool-macos-aarch64.dmg`
         files: |
-          bilibili_live_tool-linux-x86_64
-          bilibili_live_tool-windows-x86_64.exe
-          bilibili_live_tool-macos-aarch64
-        generate_release_notes: true
+          artifacts/bilibili_live_tool-linux-x86_64/bilibili_live_tool
+          artifacts/bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool.exe
+          artifacts/bilibili_live_tool-macos-aarch64.dmg/bilibili_live_tool.dmg
+        generate_release_notes: false
         draft: false
         prerelease: false
       env:
