--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
             target: x86_64-pc-windows-msvc
           - os: macos-latest
             artifact_name: bilibili_live_tool
-            asset_name: bilibili_live_tool-macos-aarch64.dmg
+            asset_name: bilibili_live_tool-macos-aarch64
             target: aarch64-apple-darwin
 
     steps:
@@ -74,9 +74,10 @@ jobs:
 
     - name: Move artifacts to root
       run: |
-        cp bilibili_live_tool-linux-x86_64/bilibili_live_tool ./bilibili_live_tool-linux-x86_64
-        cp bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool.exe ./bilibili_live_tool-windows-x86_64.exe
-        cp bilibili_live_tool-macos-aarch64.dmg/bilibili_live_tool ./bilibili_live_tool-macos-aarch64
+        ls -la
+        mv bilibili_live_tool-linux-x86_64/bilibili_live_tool ./bilibili_live_tool-linux-x86_64
+        mv bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool.exe ./bilibili_live_tool-windows-x86_64.exe
+        mv bilibili_live_tool-macos-aarch64/bilibili_live_tool ./bilibili_live_tool-macos-aarch64
         ls -la
 
     - name: Get version from tag
