--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,27 +67,11 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
 
-    - name: Create archive (Unix)
-      if: matrix.os != 'windows-latest'
-      run: |
-        cd target/${{ matrix.target }}/release
-        tar czf ../../../${{ matrix.asset_name }}.tar.gz ${{ matrix.artifact_name }}
-        cd ../../..
-
-    - name: Create archive (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        cd target/${{ matrix.target }}/release
-        7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.artifact_name }}
-        cd ../../..
-
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.asset_name }}
-        path: |
-          ${{ matrix.asset_name }}.tar.gz
-          ${{ matrix.asset_name }}.zip
+        path: target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
         if-no-files-found: error
 
   release:
@@ -110,13 +94,10 @@ jobs:
         mkdir -p release-assets
         
         # 复制并重命名所有平台的二进制文件
-        if [ -f "bilibili_live_tool-linux-x86_64/bilibili_live_tool-linux-x86_64.tar.gz" ]; then
-          cp bilibili_live_tool-linux-x86_64/bilibili_live_tool-linux-x86_64.tar.gz release-assets/
-        fi
+        cp bilibili_live_tool-linux-x86_64/bilibili_live_tool release-assets/bilibili_live_tool-linux-x86_64
+        chmod +x release-assets/bilibili_live_tool-linux-x86_64
         
-        if [ -f "bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool-windows-x86_64.exe.zip" ]; then
-          cp bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool-windows-x86_64.exe.zip release-assets/
-        fi
+        cp bilibili_live_tool-windows-x86_64.exe/bilibili_live_tool.exe release-assets/bilibili_live_tool-windows-x86_64.exe
         
         ls -la release-assets/
 
@@ -143,14 +124,14 @@ jobs:
           ### 下载链接
           
           #### Linux
-          - [x86_64](bilibili_live_tool-linux-x86_64.tar.gz)
+          - [x86_64](bilibili_live_tool-linux-x86_64)
           
           #### Windows
-          - [x86_64](bilibili_live_tool-windows-x86_64.exe.zip)
+          - [x86_64](bilibili_live_tool-windows-x86_64.exe)
           
           ### 使用说明
-          - Linux: 下载后解压，运行 `./bilibili_live_tool`
-          - Windows: 下载后解压，运行 `bilibili_live_tool.exe`
+          - Linux: 下载后直接运行 `./bilibili_live_tool`
+          - Windows: 下载后直接运行 `bilibili_live_tool.exe`
           
           ### 系统要求
           - x86_64 架构
@@ -187,10 +168,10 @@ jobs:
         ## 下载
         
         ### Linux
-        - [x86_64](bilibili_live_tool-linux-x86_64.tar.gz)
+        - [x86_64](bilibili_live_tool-linux-x86_64)
         
         ### Windows
-        - [x86_64](bilibili_live_tool-windows-x86_64.exe.zip)
+        - [x86_64](bilibili_live_tool-windows-x86_64.exe)
         
         ## 构建信息
         - 构建时间: $(date -u +"%Y-%m-%d %H:%M:%S UTC")
